# riscv-opcodes-parser

./: Cargo.toml  README.md  rustfmt.toml
src/: fetcher.rs  lib.rs  main.rs  opcodes.rs  parser.rs  reader.rs
src/cli/: mod.rs
