[package]
name = "riscv-opcodes-parser"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rvop"
path = "src/main.rs"

[lib]
name = "rvop"

[dependencies]
anyhow = "1.0.58"
chumsky = "0.8.0"
clap = { version = "3.2.16", features = ["derive"] }
const_format = "0.2.26"
git2 = "0.14.4"
globset = "0.4.9"
num-traits = "0.2.15"
spdlog-rs = "0.2.4"
tempfile = "3.3.0"
walkdir = "2.3.2"

[features]
